# tulipmania

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tulipmania/: __main__.py  adapters.py  cli.py  config.py  init_cmd.py  loop.py
src/tulipmania/templates/: AGENTS.md  IMPLEMENTATION_PLAN.md  PROMPT_plan.md  PROMPT_plan_work.md  tulipmania.toml
